--- a/auctions/templates/auctions/my_auctions.html
+++ b/auctions/templates/auctions/my_auctions.html
@@ -2,24 +2,36 @@
 {% load static %}
 
 {% block body %}
-<h2>My Auctions</h2>
 
-{% if auction %}
-{% for data in auction %}
-<a href="/category/auction/{{data.name}}"><h5>{{data.name}}</h5></a>
-<a href="/category/auction/{{data.name}}"><img
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="{% url 'index' %}">Home</a>
+            <li class="breadcrumb-item active" aria-current="page">Saved</li>
+        </ol>
+    </nav>
+
+    <h2>My Auctions</h2>
+
+    <div class="container">
+        {% if auction %}
+        {% for data in auction %}
+        <a href="/category/auction/{{data.name}}"><h5>{{data.name}}</h5></a>
+        <a href="/category/auction/{{data.name}}"><img
+                class="img-thumbnail"
                 src="{% get_static_prefix %}img/{{data.image}}" width="110"
                 height="130"
                 alt="No photo"></a>
-{{data.price}} грн
-<p>{{data.brief_descrip}}</p>
-{% endfor %}
-{% else %}
-<p>No auktions</p>
-{% endif %}
+        <p>{{data.price}} грн</p>
+        <p>{{data.brief_descrip}}</p>
+        {% endfor %}
+        {% else %}
+        <p>No auktions</p>
+        {% endif %}
+    </div>
 
 
 
 
 
-{% endblock %}
+    {% endblock %}
