--- a/auctions/templates/paypal/success.html
+++ b/auctions/templates/paypal/success.html
@@ -48,6 +48,7 @@
       <h1>Success</h1>
       <p>We received your purchase request;<br/> we'll be in touch
           shortly!</p>
+        <a href="{% url 'index' %}">Back to home page</a>
       </div>
     </body>
   </html>
