views.py func  view_that_asks_for_money add price.

--- a/auctions/templates/paypal/payment.html
+++ b/auctions/templates/paypal/payment.html
@@ -8,6 +8,7 @@
     <img src="{% get_static_prefix %}img/{{image}}"
         alt="Not photo" width="200"
         height="auto">
+    <p>{{price}}$</p>
     <!-- writes out the form tag automatically -->
     {{ form.render }}
 </div>
